<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_home"
            app:destination="@id/navigation_detail_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myevent.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_detail_home"
            app:destination="@id/navigation_detail_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.myevent.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_detail_home"
            app:destination="@id/navigation_detail_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail_home"
        android:name="com.example.myevent.ui.DetailFragment"
        android:label="@string/title_detail_home"
        tools:layout="@layout/fragment_detail"/>
</navigation>