<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imgEventCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorite"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@id/imgEventCover"
            app:layout_constraintEnd_toEndOf="@id/imgEventCover"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/event_name"
            app:layout_constraintTop_toBottomOf="@id/imgEventCover"/>

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/owner_name"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvBeginTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvQuota"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/begin_time"
            app:layout_constraintTop_toBottomOf="@id/tvOwnerName"/>

        <TextView
            android:id="@+id/tvQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/quota"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvBeginTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOwnerName" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvQuota"
            tools:layout_editor_absoluteX="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
